[project]
name = "workspace"
version = "0.1.0"
description = "docent bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.80.0",
    "black==26.1.0",
    "bs4==0.0.2",
    "dill==0.4.0",
    "fastmcp==2.14.5",
    "ipython==9.10.0",
    "mcp==1.26.0",
    "numpy==2.3.3",
    "openai==2.21.0",
    "pillow==12.1.1",
    "streamlit==1.54.0",
    "tavily-python==0.7.21",
    "slack-bolt==1.27.0",
    "aiohttp==3.13.3",
    "claude-agent-sdk==0.1.37",
    "apscheduler==3.11.2",
    "tzlocal==5.3.1",
    "python-dotenv==1.2.1",
]